--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,62 @@
+body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 #twitch-embed {
   display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  aspect-ratio: 16 / 9;
+  width: 33vw;
+}
+
+#twitch-embed.lights-off {
+  top: 0;
+  bottom: 0;
+  z-index: 999;
+  right: 0;
+  left: 0;
+  width: 100vw;
+  max-height: 100vh;
+}
+
+#twitch-embed p {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+  padding: 8px;
+  margin: 0;
+}
+
+iframe {
+  width: 100%;
+  height: 100%;
 }
 
 .online {
   display: block !important;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-size: 3.5rem;
+  text-shadow: 0px 0px 8px rgba(0, 0, 0, 1);
+  color: #fff;
+}
+
+.info-container {
+  max-width: 50vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 16px;
 }
