--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,13 @@ h1 {
   display: block;
 }
 
+#lights-out h1 {
+  font-size: 5.5rem;
+}
+
 #lights-out p {
   font-weight: 700;
   text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
   color: #fff;
+  font-size: 2.5rem;
 }
