--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,13 @@ body {
 iframe {
   width: 100%;
   height: 100%;
+}
+
+#twitch-embed.lights-off iframe {
   max-height: calc(100vh - 74px);
+  position: fixed;
+  top: 74px;
+  height: calc(1080px - 74px);
 }
 
 .online {
