--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,7 @@ h1 {
   text-transform: uppercase;
   font-size: 3.5rem;
   text-shadow: 0px 0px 8px rgba(0, 0, 0, 1);
+  -webkit-text-stroke: 2px #000;
   color: #fff;
 }
 
@@ -121,6 +122,7 @@ h1 {
 #lights-out p {
   font-weight: 700;
   text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
+  -webkit-text-stroke: 2px #000;
   color: #fff;
   font-size: 2.5rem;
 }
