--- a/styles.css
+++ b/styles.css
@@ -312,3 +312,19 @@ h1 {
     opacity: 1;
   }
 }
+
+.carousel-cell {
+  width: 100%;
+  height: 200px;
+  padding-inline: 32px;
+  padding-block: 16px;
+  margin-right: 10px;
+  border-radius: 5px;
+  background-color: #8c8;
+}
+
+.news-item-title {
+  font-size: 1.15rem;
+  margin: 0;
+  font-weight: bold;
+}
