--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Bebas Neue", sans-serif;
   position: relative;
 }
 
@@ -87,11 +87,13 @@ iframe {
 }
 
 h1 {
+  font-family: "Archivo Black", sans-serif;
   text-transform: uppercase;
   font-size: 3.5rem;
   text-shadow: 0px 0px 8px rgba(0, 0, 0, 1);
   -webkit-text-stroke: 2px #000;
   color: #fff;
+  margin: 0;
 }
 
 .info-container {
@@ -100,6 +102,20 @@ h1 {
   top: 0;
   left: 0;
   padding: 16px;
+}
+
+.info-container div {
+  background-color: rgba(0, 0, 0, 0.25);
+  padding: 16px;
+}
+
+.info-container div p {
+  margin: 0;
+  color: #fff;
+  font-weight: 700;
+  font-size: 1.75rem;
+  word-spacing: 4px;
+  letter-spacing: 2px;
 }
 
 #lights-out {
