--- a/styles.css
+++ b/styles.css
@@ -127,8 +127,16 @@ h1 {
   display: none;
 }
 
-#lights-out.active {
-  display: block;
+#lights-out::after {
+  content: '';
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0);
+  z-index: -1;
 }
 
 #lights-out h1 {
