--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,7 @@ h1 {
   top: 0;
   left: 0;
   padding: 16px;
+  z-index: 100;
 }
 
 .info-container div {
@@ -125,6 +126,10 @@ h1 {
   transform: translate(-50%, -50%);
   text-align: center;
   display: none;
+}
+
+#lights-out.active {
+  display: block !important;
 }
 
 #lights-out::after {
